[package]
name = "surs"
description = "A sudo alternative written in Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
libc = "0.2.172"
libcrypt-rs = "0.1.2"
once_cell = "1.21.3"
pwhash = "1.0.0"
rand = "0.9.1"
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shadow = "0.0.1"
yescrypt = "0.0.1-alpha"
